[#51] fix : overflow hidden 에 따른 artist page scroll 문제 해결

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -125,3 +125,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: relative;
+  -webkit-overflow-scrolling: touch;
+}
